# subseq_agents

./: AGENTS.md  Cargo.toml
design/: mcp_tools_build_plan.md
examples/: README.md  dev_mcp_server.rs
examples/fixtures/agent_frontend/: index.html
examples/fixtures/agent_frontend/__agent/: routes.json
examples/fixtures/agent_frontend/__agent/pages/: index.md
examples/fixtures/agent_frontend/__agent/pages/private/: portal-sessions.md
migrations/: 20260208161000_agent_api_keys.sql  20260212120000_mcp_api_keys_constraints.sql  20260212143000_mcp_api_key_rate_limits.sql
src/: agent_markdown.rs  api_keys.rs  db.rs  key_management.rs  lib.rs  middleware.rs  rate_limits.rs  router.rs
tests/: sqlx_api_keys.rs  sqlx_rate_limits.rs
tests/support/: test_harness.rs
